# mantic-thinking

./: .gitignore  AGENTS.md  CLAUDE.md  COMMERCIAL_LICENSE  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SKILL.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
adapters/: __init__.py  claude_adapter.py  gemini_adapter.py  kimi_adapter.py  openai_adapter.py
configs/: README.md  mantic_boundary_weaver.md  mantic_codebase.md  mantic_command.md  mantic_current.md  mantic_early_warning_tools.md  mantic_finance.md  mantic_health.md  mantic_legal.md  mantic_plan.md  mantic_reasoning_guidelines.md  mantic_security.md  mantic_self_analysis_results.md  mantic_tech_spec.md  mantic_value_emergence_tools.md
core/: mantic_kernel.py  safe_kernel.py  validators.py
mantic/introspection/: __init__.py  hierarchy.py
mantic_thinking/: __init__.py  __main__.py  server.py
mantic_thinking/adapters/: __init__.py  claude_adapter.py  gemini_adapter.py  kimi_adapter.py  openai_adapter.py
mantic_thinking/configs/: README.md  __init__.py  mantic_climate.md  mantic_early_warning_tools.md  mantic_explicit_framework.md  mantic_mcp_bootstrap.md  mantic_plan.md  mantic_scaffold.md  mantic_social.md  mantic_system_lock.md  mantic_system_prompt.md  mantic_value_emergence_tools.md
mantic_thinking/core/: __init__.py  mantic_kernel.py  safe_kernel.py  validators.py
mantic_thinking/mantic/: __init__.py
mantic_thinking/mantic/introspection/: __init__.py  hierarchy.py
mantic_thinking/schemas/: __init__.py  kimi-tools.json  openapi.json
mantic_thinking/tools/: __init__.py  generic_detect.py
mantic_thinking/tools/emergence/: __init__.py  climate_resilience_multiplier.py  climate_resilience_multiplier.yaml  cyber_adversary_overreach.py  cyber_adversary_overreach.yaml  finance_confluence_alpha.py  finance_confluence_alpha.yaml  healthcare_precision_therapeutic.py  healthcare_precision_therapeutic.yaml  legal_precedent_seeding.py  legal_precedent_seeding.yaml  military_strategic_initiative.py  military_strategic_initiative.yaml  social_catalytic_alignment.py  social_catalytic_alignment.yaml  system_lock_dissolution_window.py  system_lock_dissolution_window.yaml
mantic_thinking/tools/friction/: __init__.py  climate_maladaptation.py  climate_maladaptation.yaml  cyber_attribution_resolver.py  cyber_attribution_resolver.yaml  finance_regime_conflict.py  finance_regime_conflict.yaml  healthcare_phenotype_genotype.py  healthcare_phenotype_genotype.yaml  legal_precedent_drift.py  legal_precedent_drift.yaml  military_friction_forecast.py  military_friction_forecast.yaml  social_narrative_rupture.py  social_narrative_rupture.yaml  system_lock_recursive_control.py  system_lock_recursive_control.yaml
mantic_thinking/visualization/: __init__.py  ascii_charts.py
schemas/: kimi-tools.json  openapi.json
scripts/: self_analysis.py
tests/: __init__.py  test_cross_model.py  test_cross_model_deep.py  test_domain_logic_deep.py  test_friction_emergence_pairs.py  test_generic_detect.py  test_integration_e2e.py  test_interaction_override.py  test_kernel_properties.py  test_layer_visibility.py  test_output_schemas.py  test_override_adversarial.py  test_regression_snapshots.py  test_schema_alignment.py  test_server.py  test_system_lock.py  test_temporal_extremes.py  test_tool_guidance.py  test_validator_edge_cases.py
tools/: __init__.py
tools/emergence/: __init__.py  climate_resilience_multiplier.py  codebase_alignment_window.py  cyber_adversary_overreach.py  finance_confluence_alpha.py  healthcare_precision_therapeutic.py  legal_precedent_seeding.py  military_strategic_initiative.py  plan_alignment_window.py  social_catalytic_alignment.py
tools/friction/: __init__.py  climate_maladaptation.py  codebase_layer_conflict.py  cyber_attribution_resolver.py  finance_regime_conflict.py  healthcare_phenotype_genotype.py  legal_precedent_drift.py  military_friction_forecast.py  social_narrative_rupture.py
visualization/: ascii_charts.py
