[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mantic-tools"
version = "1.1.0"
description = "Cross-domain anomaly and opportunity detection using 4-layer hierarchical analysis"
readme = "README.md"
license = {text = "Elastic License 2.0"}
authors = [
    {name = "Mantic Framework", email = "licensing@manticthink.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = [
    "llm",
    "reasoning",
    "hierarchical-analysis",
    "anomaly-detection",
    "opportunity-detection",
    "early-warning",
    "mantic",
    "friction",
    "emergence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Cole-Cant-Code/mantic-thinking"
Documentation = "https://github.com/Cole-Cant-Code/mantic-thinking#readme"
Repository = "https://github.com/Cole-Cant-Code/mantic-thinking.git"
Issues = "https://github.com/Cole-Cant-Code/mantic-thinking/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "/core",
    "/tools",
    "/adapters",
    "/configs",
    "/schemas",
    "/tests",
    "/visualization",
    "README.md",
    "SKILL.md",
    "LICENSE",
]
exclude = [
    "/demo.py",
    "/scripts",
    "/.git",
    "/.pytest_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core", "tools"]
omit = ["*/tests/*", "*/__pycache__/*"]
