[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mantic-thinking"
version = "1.5.0"
description = "Cross-domain anomaly and opportunity detection using 4-layer hierarchical analysis"
readme = "README.md"
license = {text = "Elastic License 2.0"}
authors = [
    {name = "Mantic Framework", email = "licensing@manticthink.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = [
    "llm",
    "reasoning",
    "hierarchical-analysis",
    "anomaly-detection",
    "opportunity-detection",
    "early-warning",
    "mantic",
    "friction",
    "emergence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Cole-Cant-Code/mantic-thinking"
Documentation = "https://github.com/Cole-Cant-Code/mantic-thinking#readme"
Repository = "https://github.com/Cole-Cant-Code/mantic-thinking.git"
Issues = "https://github.com/Cole-Cant-Code/mantic-thinking/issues"
"Commercial License" = "https://github.com/Cole-Cant-Code/mantic-thinking/blob/main/COMMERCIAL_LICENSE"

[tool.hatch.build.targets.wheel]
packages = ["mantic_thinking"]

[tool.hatch.build.targets.sdist]
include = [
    "/mantic_thinking/core",
    "/mantic_thinking/tools",
    "/mantic_thinking/adapters",
    "/mantic_thinking/mantic",
    "/mantic_thinking/configs",
    "/mantic_thinking/schemas",
    "/tests",
    "/mantic_thinking/visualization",
    "README.md",
    "SKILL.md",
    "LICENSE",
    "COMMERCIAL_LICENSE",
    "RELEASE_NOTES.md",
]
exclude = [
    "/demo.py",
    "/scripts",
    "/.git",
    "/.pytest_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["mantic_thinking"]
omit = ["*/tests/*", "*/__pycache__/*"]
